# multidim_3dvis

./: README.md  data.csv  index.html  pyproject.toml
data/: sample_data.csv
src/: analysis.py
